--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
 				<input type="radio" name="myStatus" id="F" value="Freshman">Freshman<br>
 				
 				Select Organizations: <br>
-				<input type="checkbox" name="myOrg" id="acm" value="ACM">Freshman<br>
-				<input type="checkbox" name="myOrg" id="adink" value="adink">Freshman<br>
-				<input type="checkbox" name="myOrg" id="s" value="sorority">Freshman<br>
-				<input type="checkbox" name="myOrg" id="f" value="fraternity">Freshman<br>
-				<input type="checkbox" name="myOrg" id="o" value="other">Freshman<br>	
+				<input type="checkbox" name="myOrg" id="acm" value="ACM">ACM<br>
+				<input type="checkbox" name="myOrg" id="adink" value="adink">Adink<br>
+				<input type="checkbox" name="myOrg" id="s" value="sorority">Sorority<br>
+				<input type="checkbox" name="myOrg" id="f" value="fraternity">Fraternity<br>
+				<input type="checkbox" name="myOrg" id="o" value="other">Other<br>	
 			</fieldset>
 			<fieldset id="stuInfoCol1">
 				<legend>Campus</legend>
