--- a/index.html
+++ b/index.html
@@ -4,20 +4,26 @@
 		<title>Newtn Chapter8-9InClassNotes</title> 
 		<meta charset="utf-8"> 
 		<style>
-			table { margin:auto;
-				border: 5px solid #000;
+			table { background-color:#000;
+				color:#fff;
+				margin:auto;
+				border: 5px solid #fff;
 				border-spacing: 0px;}
 			td, th {padding: 0.5em;}
-			caption {font-size:1.2em;}
+			caption {font-size:1.2em;
+				color:#fff;}
 			#wrapper {display:flex;
 				flex-direction:row;}
-			form{background-color:#eaeaea;
+			form{background-color:#000;
+				color:#fff;
 				font-family:Arial,sans-serif;
 				padding:10px;
 				min-width:400px;}
-			fieldset {border:2px ridge #000;
-				padding:10px;}
+			fieldset {border:2px ridge #fff;
+				padding:10px;
+				color:#fff;}
 			label {float:left;
+				color:#fff;
 				width:auto;
 				text-align:right;
 				padding-right:10px;
