--- a/index.html
+++ b/index.html
@@ -4,26 +4,24 @@
 		<title>Newtn Chapter8-9InClassNotes</title> 
 		<meta charset="utf-8"> 
 		<style>
-			table { background-color:#000;
-				color:#fff;
+			table { background-color:#fff;
+
 				margin:auto;
-				border: 5px solid #fff;
+				border: 5px solid #000;
 				border-spacing: 0px;}
 			td, th {padding: 0.5em;}
 			caption {font-size:1.2em;
-				color:#fff;}
+				}
 			#wrapper {display:flex;
 				flex-direction:row;}
-			form{background-color:#000;
-				color:#fff;
+			form{background-color:#aeaeae;
 				font-family:Arial,sans-serif;
 				padding:10px;
 				min-width:400px;}
 			fieldset {border:2px ridge #fff;
 				padding:10px;
-				color:#fff;}
+			}
 			label {float:left;
-				color:#fff;
 				width:auto;
 				text-align:right;
 				padding-right:10px;
