--- a/index.html
+++ b/index.html
@@ -4,23 +4,19 @@
 		<title>Newtn Chapter8-9InClassNotes</title> 
 		<meta charset="utf-8"> 
 		<style>
-			table { background-color:#fff;
-
-				margin:auto;
+			table { margin:auto;
 				border: 5px solid #000;
 				border-spacing: 0px;}
 			td, th {padding: 0.5em;}
-			caption {font-size:1.2em;
-				}
+			caption {font-size:1.2em;}
 			#wrapper {display:flex;
 				flex-direction:row;}
-			form{background-color:#aeaeae;
+			form{background-color:#eaeaea;
 				font-family:Arial,sans-serif;
 				padding:10px;
 				min-width:400px;}
-			fieldset {border:2px ridge #fff;
-				padding:10px;
-			}
+			fieldset {border:2px ridge #000;
+				padding:10px;}
 			label {float:left;
 				width:auto;
 				text-align:right;
